--- a/src/css/list.styl
+++ b/src/css/list.styl
@@ -34,6 +34,7 @@
             margin 0 0 5px 0
             max-width none
             width 90%
+            text-align left
             font-weight 100
     .description
         a
